--- a/index.html
+++ b/index.html
@@ -1,37 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Rock, Paper, Scissors</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Rock, Paper, Scissors</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="score__board">
+        <div class="title">
+          <p>Rock</p>
+          <p>paper</p>
+          <p>Scissors</p>
+          <p>lizard</p>
+          <p>spock</p>
+        </div>
+        <div class="score">
+          <p>Score</p>
+          <h1>0</h1>
+        </div>
+      </div>
+      <div class="block disable">
+        <div class="pentagon">
+          <img src="./images/bg-pentagon.svg" alt="" />
+        </div>
+        <div class="rules_img">
+          <div class="top">
+            <div class="button yellow">
+              <img src="./images/icon-scissors.svg" alt="" />
+            </div>
+          </div>
+          <div class="between">
+            <div class="button skyblue">
+              <img src="./images/icon-spock.svg" alt="" />
+            </div>
 
-  Score
-  Rules
+            <div class="button thickblue">
+              <img src="./images/icon-paper.svg" alt="" />
+            </div>
+          </div>
+          <div class="evenly">
+            <div class="button purple">
+              <img src="./images/icon-lizard.svg" alt="" />
+            </div>
 
-  You Picked
-  The House Picked
-
-  You Win
-  You Lose
-
-  Play Again
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+            <div class="button red">
+              <img src="./images/icon-rock.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
